# src/REST-entities/user/user.router.ts
@@ -1,8 +1,9 @@
 import { Router } from "express";
 import Joi from "joi";
 import validate from "../../helpers/function-helpers/validate";
+import { authorize } from "./../../auth/auth.controller";
 import tryCatchWrapper from "../../helpers/function-helpers/try-catch-wrapper";
-import { clearAllInfo } from "./user.controller";
+import { getAllInfo, clearAllInfo } from "./user.controller";
 
 const clearAllInfoSchema = Joi.object({
   email: Joi.string().required(),
@@ -11,6 +12,7 @@ const clearAllInfoSchema = Joi.object({
 
 const router = Router();
 
+router.get("/", authorize, tryCatchWrapper(getAllInfo));
 router.delete("/", validate(clearAllInfoSchema), tryCatchWrapper(clearAllInfo));
 
 export default router;
